--- a/.env
+++ b/.env
@@ -23,8 +23,8 @@ MAIL_PASSWORD=twoje-haslo-lub-app-password
 MAIL_DEFAULT_SENDER=noreply@invoicex.com
 
 # Ustawienia faktur
-INVOICE_PREFIX=INV-
-INVOICE_START_NUMBER=1000
+INVOICE_PREFIX=FV-
+INVOICE_START_NUMBER=1
 INVOICE_DEFAULT_DUE_DAYS=14
 
 # Integracje płatności
