Dodanie modelu pozyczek

--- a/.env
+++ b/.env
@@ -1,7 +1,8 @@
 # Podstawowa konfiguracja aplikacji
 FLASK_APP=run.py
 FLASK_ENV=development  # development, testing, production
-FLASK_DEBUG=True  # True w development, False w production
+# True w development, False w production
+FLASK_DEBUG=True  
 SECRET_KEY=zmien-to-na-bezpieczny-klucz-w-produkcji
 
 # Konfiguracja bazy danych
